--- a/README.org
+++ b/README.org
@@ -3,3 +3,4 @@
 ** 学习笔记
 - [[https://greyzhang.blog.csdn.net/article/details/119192957][698_安装AURIX开发工具HighTec并做编译测试]]
 - [[https://greyzhang.blog.csdn.net/article/details/119222545][699_在Hightec生成的map文件中快速定位存储分区]]
+- [[https://greyzhang.blog.csdn.net/article/details/119392716][711_HighTec实现memory layout的简单操作]]
